Update test cases and remove unused code